<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Clase15</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hotphone">Ingresa un telefono</string>
    <string name="btnphone">Llamar</string>
    <string name="hitgeo1">Latitud</string>
    <string name="hitaltitud">Altitud</string>
    <string name="btnlocate">Localizar</string>
    <string name="btnsend">Enviar</string>
    <string name="hitmail">Correo Electronico</string>
    <string name="hitsubject">Tema</string>
    <string name="hitcontent">Contenido</string>
</resources>
